--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="post">
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Name">
+        <!-- phone number  -->
+        <label for="phone">Phone Number</label>
+        <input type="text" placeholder="Phone Number" id="phone">
+        <!-- address  -->
+        <label for="address">Address</label>
+        <input type="text" name="" id="address" placeholder="Address">
+        <!-- checkbox  -->
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
+        <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+
+        <!-- select  -->
+        <label for="multiSelect">Please select your preferred breeds</label>
+        <select name="" id="multiSelect">
+            <option value="breed1">Bull Dog</option>
+            <option value="breed2">Labrador</option>
+            <option value="breed3">Husky</option>
+        </select>
+        <input type="submit" value="Submit" id="submit">
+
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
